# academic-verification

./: Cargo.toml  README.md  chain_spec.json
academic-verification-frontend/: .env  .env.example  check-files.sh  index.html  package-lock.json  package.json  repomix-output.xml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
academic-verification-frontend/src/: App.tsx  index.css
academic-verification-frontend/src/components/blockchain/: ChainStatus.tsx  WalletConnect.tsx  index.ts  useBalance.ts
academic-verification-frontend/src/components/credentials/: CredentialCard.tsx  CredentialDetailModal.tsx  CredentialsList.tsx  IssueCredentialForm.jsx  IssueCredentialForm.tsx  VerifyCredential.tsx  index.ts
academic-verification-frontend/src/pages/: AdminVerification.tsx  CreateDIDPage.tsx  Credentials.tsx  Dashboard.tsx  Home.tsx  Institution.tsx  InstitutionRequests.tsx  Institutions.tsx  IssueCredential.tsx  IssuedCredentials.tsx  MyRequests.tsx  Settings.tsx  Verify.tsx
academic-verification-frontend/src/providers/: PolkadotProvider.tsx  WalletProvider.tsx
academic-verification-frontend/src/store/: credentialRequests.store.ts  credentials.store.ts  did.store.ts  notifications.store.ts  ui.store.ts  wallet.store.ts
academic-verification-frontend/src/types/: credentialRequest.types.ts
pallets/: repomix-output.xml
pallets/credential/: Cargo.toml
pallets/credential/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/did/: Cargo.toml
pallets/did/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/reputation/: Cargo.toml
pallets/reputation/src/: lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
(+33 files in other folders)
